# encode-autumn-solana-bootcamp-q3-2023

./: .gitignore  LICENSE  README.md
day_02/: README.md
day_03/: README.md
day_03/demo-wallets/: my-keypair.json
day_04/: README.md
day_04/fizzbuzz/src/: main.rs
day_05-07/: README.md
day_08/: README.md
day_09/example1-helloworld/: README.md  package-lock.json
day_09/example1-helloworld/client/: main.ts
day_09/example1-helloworld/rust/: Cargo.toml
day_09/example2-counter/: README.md  package-lock.json  package.json
day_09/example2-counter/client/: main.ts
day_09/example2-counter/rust/: Cargo.toml
day_10/: README.md
day_10/example3-multifunc/: README.md  package-lock.json  package.json  tsconfig.json
day_10/example3-multifunc/client/: main.ts
day_10/example3-multifunc/rust/: Cargo.toml
day_11/: README.md
day_12/example1-helloworld/: package.json
day_12/example1-helloworld/rust/: Cargo.toml
day_12/example1-helloworld/rust/src/: lib.rs
day_12/example4-cpi/: README.md  package-lock.json  package.json
day_12/example4-cpi/rust/: Cargo.toml
day_12/example4-cpi/rust/src/: lib.rs
day_12/example5-compute/: README.md  package-lock.json  package.json
day_12/helloworld_anchor/: Anchor.toml  README.md  package.json  tsconfig.json
day_13/example1-lottery/: Anchor.toml  README.md  package.json
day_13/example1-lottery/programs/example1_lottery/: Cargo.toml
day_13/example1-lottery/programs/example1_lottery/src/: lib.rs
day_13/hello_anchor/: Anchor.toml  package.json
day_14/hello_anchor/: README.md
(+39 files in other folders)
