
[package]
name = "cpi"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "=1.16.13"

[lib]
name = "cpi"
crate-type = ["cdylib", "lib"]
